--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lab4_2" >
+    package="com.example.lab3_2" >
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab4_2" >
+        android:theme="@style/Theme.Lab3_2" >
 
         <activity
-            android:name=".Activity1"
+            android:name="com.example.lab3_2.Activity1"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,13 +20,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity2"
+            android:name="com.example.lab3_2.Activity2"
             android:exported="true" />
         <activity
-            android:name=".Activity3"
+            android:name="com.example.lab3_2.Activity3"
             android:exported="true" />
         <activity
-            android:name=".ActivityAbout"
+            android:name="com.example.lab3_2.ActivityAbout"
             android:exported="true" />
     </application>
 
