--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
 
         <activity
             android:name="com.example.lab3_2.MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:label="Activity 1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,13 +22,19 @@
         </activity>
         <activity
             android:name="com.example.lab3_2.Activity2"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
+            android:label="Activity 2"/>
         <activity
             android:name="com.example.lab3_2.Activity3"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".Activity2"
+            android:label="Activity 3"/>
         <activity
             android:name="com.example.lab3_2.ActivityAbout"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
+            android:label="About activity"/>
     </application>
 
 </manifest>
